<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android in sette giorni - Cap 5</string>
    <string name="action_settings">Settings</string>
    <string name="ip_information">Informazioni sul tuo Indirizzo IP</string>
    <string name="endpoint">http://wtfismyip.com/json</string>
    <string name="ip">Il tuo IP è </string>
    <string name="isp">Il tuo ISP è </string>
    <string name="provider">Il tuo Provider è </string>
    <string name="location">Ti trovi in </string>
    <string name="loading">....Calcolo</string>
    <string name="error"> Errore</string>
    <string name="text_button">Calcola Ip</string>
    <string name="image_button">Scarica Immagine</string>

</resources>