<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidinsettegiorni_cap5.MainActivity" >

    <TextView
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_title"
        android:text="@string/ip_information" />

    <TextView
        android:id="@+id/current_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip" />

    <TextView
        android:id="@+id/current_isp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isp" />

    <TextView
        android:id="@+id/current_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider" />

    <TextView
        android:id="@+id/current_localtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:onClick="calculate_ip"
            android:text="@string/text_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:onClick="update_image"
            android:text="@string/image_button" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

</LinearLayout>